--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   ],
   "dependencies": {
     "prop-types": "^15.6.1",
-    "react": "^16.3.1"
+    "react": "^16.3.1",
+    "react-motion": "^0.5.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -51,7 +52,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "style-loader": "^0.20.3",
-    "webpack": "^4.5.0",
+    "webpack": "^4.44.1",
     "webpack-cli": "^2.0.14"
   },
   "peerDependencies": {
